--- a/modern-react/package.json
+++ b/modern-react/package.json
@@ -7,12 +7,17 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
+    "dns-packet": "^5.2.4",
+    "elliptic": "^6.5.4",
+    "merge-deep": "^3.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "url-params": "^1.0.2",
+    "url-parse": "^1.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
