--- a/creating_profile/package.json
+++ b/creating_profile/package.json
@@ -9,6 +9,7 @@
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "emotion": "^11.0.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "firebase": "^8.6.8",
     "install": "^0.13.0",
     "npm": "^7.18.1",
