--- a/creating_profile/tsconfig.json
+++ b/creating_profile/tsconfig.json
@@ -18,7 +18,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "removeComments": true,
+    "jsx": "react-jsx"
   },
   "include": [
     "src"
