--- a/base-template-ts/package.json
+++ b/base-template-ts/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "color-string": "^1.5.5",
     "emotion": "^11.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
