--- a/modern-react/package.json
+++ b/modern-react/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
+    "color-string": "^1.5.5",
     "dns-packet": "^5.2.4",
     "elliptic": "^6.5.4",
     "merge-deep": "^3.0.3",
@@ -17,7 +18,8 @@
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.1",
     "url-params": "^1.0.2",
-    "url-parse": "^1.5.1"
+    "url-parse": "^1.5.1",
+    "ws": "^7.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
